Update integration tests for JWT authentication