@@ -3,6 +3,10 @@ package com.paychecker.integration;
 import com.paychecker.account.dto.AccountResponse;
 import com.paychecker.account.dto.CreateAccountRequest;
 import com.paychecker.alert.dto.RiskAlertResponse;
+import com.paychecker.auth.dto.LoginRequest;
+import com.paychecker.auth.dto.LoginResponse;
+import com.paychecker.auth.dto.RegisterUserRequest;
+import com.paychecker.auth.dto.UserResponse;
 import com.paychecker.common.dto.PageResponse;
 import com.paychecker.eventlog.dto.FinancialEventResponse;
 import com.paychecker.payment.domain.PaymentStatus;
@@ -11,17 +15,16 @@ import com.paychecker.payment.dto.PaymentAuthorizationResponse;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.web.client.TestRestTemplate;
 import org.springframework.boot.testcontainers.service.connection.ServiceConnection;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.http.*;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
 import java.math.BigDecimal;
+import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -38,7 +41,9 @@ class PaymentAuthorizationIntegrationTest {
 
     @Test
     void shouldSendHighRiskPaymentToManualReviewAndCreateAlertAndEvents() {
-        AccountResponse account = createAccount();
+        HttpHeaders headers = authenticatedHeaders();
+
+        AccountResponse account = createAccount(headers);
 
         AuthorizePaymentRequest paymentRequest = new AuthorizePaymentRequest(
                 account.id(),
@@ -49,10 +54,13 @@ class PaymentAuthorizationIntegrationTest {
                 "PT"
         );
 
+        HttpEntity<AuthorizePaymentRequest> paymentEntity =
+                new HttpEntity<>(paymentRequest, headers);
+
         ResponseEntity<PaymentAuthorizationResponse> paymentResponse =
                 restTemplate.postForEntity(
                         "/api/payments/authorize",
-                        paymentRequest,
+                        paymentEntity,
                         PaymentAuthorizationResponse.class
                 );
 
@@ -66,11 +74,13 @@ class PaymentAuthorizationIntegrationTest {
         assertThat(payment.riskScore()).isEqualTo(75);
         assertThat(payment.reasons()).containsExactly("VERY_HIGH_AMOUNT", "NEW_BENEFICIARY");
 
+        HttpEntity<Void> authEntity = new HttpEntity<>(headers);
+
         ResponseEntity<PageResponse<RiskAlertResponse>> alertsResponse =
                 restTemplate.exchange(
                         "/api/alerts?page=0&size=10",
                         HttpMethod.GET,
-                        null,
+                        authEntity,
                         new ParameterizedTypeReference<>() {
                         }
                 );
@@ -79,7 +89,7 @@ class PaymentAuthorizationIntegrationTest {
         assertThat(alertsResponse.getBody()).isNotNull();
         assertThat(alertsResponse.getBody().content()).hasSize(1);
 
-        RiskAlertResponse alert = alertsResponse.getBody().content().getFirst();
+        RiskAlertResponse alert = alertsResponse.getBody().content().get(0);
 
         assertThat(alert.paymentId()).isEqualTo(payment.paymentId());
         assertThat(alert.accountId()).isEqualTo(account.id());
@@ -91,7 +101,7 @@ class PaymentAuthorizationIntegrationTest {
                 restTemplate.exchange(
                         "/api/event-log?page=0&size=10",
                         HttpMethod.GET,
-                        null,
+                        authEntity,
                         new ParameterizedTypeReference<>() {
                         }
                 );
@@ -109,7 +119,7 @@ class PaymentAuthorizationIntegrationTest {
                 );
     }
 
-    private AccountResponse createAccount() {
+    private AccountResponse createAccount(HttpHeaders headers) {
         CreateAccountRequest request = new CreateAccountRequest(
                 "Integration Payment User",
                 "PT50020100000000000000201",
@@ -119,12 +129,51 @@ class PaymentAuthorizationIntegrationTest {
                 new BigDecimal("50000.00")
         );
 
+        HttpEntity<CreateAccountRequest> entity = new HttpEntity<>(request, headers);
+
         ResponseEntity<AccountResponse> response =
-                restTemplate.postForEntity("/api/accounts", request, AccountResponse.class);
+                restTemplate.postForEntity("/api/accounts", entity, AccountResponse.class);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
         assertThat(response.getBody()).isNotNull();
 
         return response.getBody();
+    }
+
+    private HttpHeaders authenticatedHeaders() {
+        String email = "payment-integration-" + UUID.randomUUID() + "@example.com";
+        String password = "Password123";
+
+        RegisterUserRequest registerRequest = new RegisterUserRequest(
+                "Payment Integration User",
+                email,
+                password
+        );
+
+        ResponseEntity<UserResponse> registerResponse = restTemplate.postForEntity(
+                "/api/auth/register",
+                registerRequest,
+                UserResponse.class
+        );
+
+        assertThat(registerResponse.getStatusCode()).isEqualTo(HttpStatus.CREATED);
+
+        LoginRequest loginRequest = new LoginRequest(email, password);
+
+        ResponseEntity<LoginResponse> loginResponse = restTemplate.postForEntity(
+                "/api/auth/login",
+                loginRequest,
+                LoginResponse.class
+        );
+
+        assertThat(loginResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(loginResponse.getBody()).isNotNull();
+        assertThat(loginResponse.getBody().accessToken()).isNotBlank();
+
+        HttpHeaders headers = new HttpHeaders();
+        headers.setContentType(MediaType.APPLICATION_JSON);
+        headers.setBearerAuth(loginResponse.getBody().accessToken());
+
+        return headers;
     }
 }
